--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-pip~=21.3.1
-wheel~=0.36.2
-setuptools~=57.0.0
-MarkupSafe~=2.0.1
-Werkzeug~=2.0.2
-Jinja2~=3.0.3
-click~=8.0.3
-itsdangerous~=2.0.1
-Flask~=2.0.2
+certifi==2021.10.8
+charset-normalizer==2.0.11
+click==8.0.3
+Flask==2.0.2
+Flask-Cors==3.0.10
+idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+requests==2.27.1
+six==1.16.0
+urllib3==1.26.8
+Werkzeug==2.0.3
